--- a/01-introduction-of-vue/02-vue-instance.html
+++ b/01-introduction-of-vue/02-vue-instance.html
@@ -11,7 +11,22 @@
   <div id="app">
   </div>
 
+  <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
   <script>
+    const { createApp, ref } = Vue
+
+    const app = createApp({
+      setup() {
+        const message = ref('hello')
+        console.log(message)  // ref 객체
+        console.log(message.value)  // hello
+        return {
+          message
+        }
+      }
+    })
+
+    app.mount('#app')
   </script>
 </body>
 
